<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/bgapps"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <LinearLayout
            android:background="@drawable/gg"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"

                android:clickable="true"
                app:civ_border_width="3dp"
                app:civ_border_color="#FFFFFFFF"

                android:id="@+id/update_imageView"
                android:layout_width="150dp"
                android:layout_height="200dp"

                android:layout_centerHorizontal="true"
                android:layout_marginLeft="130dp"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_ic"
                />
            <TextView
                android:id="@+id/textViewProfile"

                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_profile"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="21sp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="45dp">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/pro"/>
            <EditText
                android:id="@+id/EditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/gender"/>
            <EditText
                android:id="@+id/EditTextSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="Enter your gender"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/birthday"/>
            <EditText
                android:id="@+id/EditTextBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_birth_day"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/blood"/>
        <EditText
            android:id="@+id/EditTextBloodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_blood_type"
            android:inputType="number"/>
    </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/blooddonationi"/>
            <EditText
                android:id="@+id/EditTextBloodDoante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_blood_donate"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/gmail"/>
            <TextView
                android:id="@+id/textViewEmailAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/email_address"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSaveButton"
        android:textColor="@color/white"
        android:background="#E9967A"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Profile"/>

</LinearLayout>
